# zcash-client-sqlx

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
migrations/: 1_initial.sql
src/: error.rs  lib.rs  pool.rs  types.rs
src/init/: mod.rs
src/testing/: concurrency.rs  db.rs  mod.rs  multi_wallet.rs  multi_wallet_reorg.rs  nullifiers.rs  pool.rs  spending_detection.rs  transparent_tests.rs
src/wallet/: commitment_tree.rs  common.rs  mod.rs  scanning.rs  testing.rs  transparent.rs
src/wallet/notes/: mod.rs  orchard.rs  sapling.rs  transparent.rs
